concord_macros/tests/dsl/fail/fail_secret_in_pagination_assignment.stderr
error: DSL-010 direct `secret.*` is not allowed in policy expressions; declare an auth credential
  --> tests/dsl/fail/fail_secret_in_pagination_assignment.rs:16:25
   |
16 |         cursor = secret.cursor
   |                         ^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_secret_in_pagination_assignment.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
